--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,8 @@ postman_tests:
         - npm install -g newman-reporter-html
         - newman run collection.json --reporters cli,html --reporter-html-export report.html
     artifacts:
+        when: always
         paths:
             - report.html
+        reports:
+            junit: report.xml
